# pacman

./: .gitignore  Build WASM.md  Cargo.toml  README.md  TODO.md  build.rs  build_wasm.sh  index.html  map.ron
assets/: textures.pptx
assets/aseprite/: blinky_down_a.aseprite  blinky_down_b.aseprite  blinky_left_a.aseprite  blinky_right_b.aseprite  blinky_up_a.aseprite  blinky_up_b.aseprite  clyde_left_b.aseprite  clyde_up_a.aseprite  clyde_up_b.aseprite  dot.aseprite  eaten_left.aseprite  energizer.aseprite  ghost_base_b.aseprite  inky_down_a.aseprite  inky_down_b.aseprite  inky_left_a.aseprite  inky_left_b.aseprite  inky_right_b.aseprite  inky_up_a.aseprite  pinky_down_b.aseprite  pinky_left_a.aseprite  pinky_right_a.aseprite  pinky_right_b.aseprite  pinky_up_a.aseprite
assets/maps/: default.map.json  map.scn.ron
load_assets/: Cargo.toml
load_assets/src/: lib.rs
map/: default_map.scn.ron
map_creator/: Cargo.toml
map_creator/src/: main.rs
maps/: default.pacmap  default_old.pacmap  new_map.json
resources/: lifecycle.pptx  textures.pptx
resources/aseprite/: energizer_sheet.aseprite
src/: animation.rs  asset_preload.rs  background_noise.rs  board.rs  board_dimensions.rs  camera.rs  common.rs  constants.rs  debug.rs  dots.rs  energizer.rs  events.rs  fruit.rs  game_asset_handles.rs  game_assets.rs  game_over_screen.rs  game_state.rs  ghost_corners.rs  ghost_house.rs  ghost_house_gate.rs  ghosts.rs  helper.rs  interactions.rs  level.rs  lib.rs  life_cycle.rs  life_cylce.rs  lives.rs  main.rs  map_creator.rs  music.rs  pacman.rs  points.rs  prelude.rs  random.rs  ready_screen.rs  score.rs  sound_effect.rs  specs_per_level.rs  speed.rs  (+5 more)
src/common/: mod.rs  position.rs
src/core/: animation.rs  constants.rs  direction.rs  edibles.rs  game_state.rs  ghost_house_gate.rs  ghost_schedule.rs  ghost_state.rs  ghosts.rs  (+18 more)
wasm/: build_wasm.sh
(+237 files in other folders)
