[package]
name = "pacman"
version = "1.0.0"
authors = ["Warhorst <46809804+Warhorst@users.noreply.github.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"
bevy-inspector-egui = "0.21.0"
bevy_asset_preload = {git = "https://github.com/Warhorst/bevy_asset_preload"}
bevy_sprite_sheet = {git = "https://github.com/Warhorst/bevy_sprite_sheet"}
pad = {git = "https://github.com/Warhorst/pad"}