[package]
name = "pacman"
version = "1.0.0"
authors = ["Warhorst <46809804+Warhorst@users.noreply.github.com>"]
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "load_assets"
]

[dependencies]
bevy = "0.18"
rand = "0.9"
bevy-inspector-egui = { version = "0.36", default-features = false, features = ["bevy_pbr", "bevy_image", "bevy_render"] }
serde = { version = "1.0.137", features = ["derive"] }
bevy_common_assets = { version = "0.15", features = ["json"]}
pad = { git = "https://github.com/Warhorst/pad", features = ["bevy"], tag = "1.3.0"}
load_assets = { path = "load_assets" }
